--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Amazon_Clone</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+        integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <header class="d-flex pt-2">
+        <div class="logo">
+            <img src="/img/Logo/White-Amazon-Logo-PNG-HD-Quality.png" alt="logo">
+        </div>
+        <div class="select_location text-center">
+            <h6>Deliver to Akash</h6>
+            <div class="d-flex align-items-center">
+                <i class="bi bi-geo-alt fs-2 text-white "></i>
+                <h6 class="m-0">Gota Ahm 382481</h6>
+            </div>
+        </div>
+        <div class="place_Holder d-flex align-items-center ms-3">
+            <select class="w-25 p-1 bg-gradient" name="categories" id="product">
+                <option value="" selected disabled>All</option>
+             <option value="Allcategories">All categories</option>
+             <option value="Alexaskils">Alexa Skills</option>
+             <option value="Amazon Devices">Amazon Devices</option>
+             <option value="Amazon Fahsion">Amazon Fahsion</option>
+             <option value="Amazon Fresh">Amazon Fresh</option>
+             <option value="Amazon Pharmacy">Amazon Pharmacy</option>
+            </select>
+            <input class= "p-1 Search-bar " type="Search" placeholder="Search in Amazon"> 
+            <button class="p-1 btn-search">
+                <i class="bi bi-search"></i>
+            </button>
+        </div>
+    </header>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
 </html>
